--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prebuild": "npm run lint",
     "build": "webpack --env envName=prod --progress",
     "build:version": "webpack --env envName=prod --env version",
+    "build:proxy": "webpack --env envName=dev --env proxy",
     "dev": "webpack serve --env envName=dev",
     "dev:proxy": "webpack serve --env envName=dev --env proxy",
     "watch": "webpack --progress --color --watch --env envName=dev",
