devops: fix cloudfront invalidate action

--- a/.github/actions/cloud-front-invalidate/action.yml
+++ b/.github/actions/cloud-front-invalidate/action.yml
@@ -24,6 +24,7 @@ runs:
     using: 'composite'
     steps:
         - name: Create CloudFront invalidation
+          shell: bash
           run: |
               # https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/invalidation-specifying-objects.html
 
